--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -62,11 +62,11 @@
                                 <li><a href="/">Home</a></li>
 
                                 {% if request.user.is_authenticated and request.user.is_student == True %}
-                                <li><a href="{% url "student_course_list" %}"">My Dashboard</a></li>
+                                <li><a href="{% url "student_course_list" %}"">Student Dashboard</a></li>
                                 {% endif %}
 
                                 {% if request.user.is_authenticated and request.user.is_teacher == True %}
-                                <li><a href="{% url "teacher_dashboard" %}"">My Dashboard</a></li>
+                                <li><a href="{% url "teacher_dashboard" %}"">Teacher Dashboard</a></li>
                                 {% endif %}
 
                                 <!-- <li><a href=" #">Pages</a>
@@ -117,6 +117,7 @@
                             <div class="register-login-area">
                                 <!-- <a href="#" class="btn">Register</a> -->
                                 <a href="{% url "login" %}" class="btn active">Sign in</a>
+                                <a href="{% url "student_registration" %}" class="btn">Register</a>
                             </div>
                             {% endif %}
 
