--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -149,6 +149,7 @@
                             <div class="register-login-area">
                                 <!-- <a href="#" class="btn">Register</a> -->
                                 <a href="{% url "login" %}" class="btn active">Sign in</a>
+                                <a href="{% url "student_registration" %}" class="btn active">Register</a>
                             </div>
                             {% endif %}
 
