--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -38,6 +38,11 @@
         </li>
         {% endif %}
 
+        <li class=" nav-item"><a class="nav-link text-dark" href="/">
+          Back to Site
+        </a>
+      </li>
+
         <li class=" nav-item notification dropdown ml-3">
           <a class="nav-link" data-toggle="dropdown" href="#">
             <span class="badge badge-danger badge-counter">0+</span>
