--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -117,7 +117,7 @@
                             <div class="register-login-area">
                                 <!-- <a href="#" class="btn">Register</a> -->
                                 <a href="{% url "login" %}" class="btn active">Sign in</a>
-                                <a href="{% url "student_registration" %}" class="btn">Register</a>
+                                <a data-toggle="modal" data-target="#exampleModal" href="void(0);" class="btn">Register</a>
                             </div>
                             {% endif %}
 
@@ -139,6 +139,24 @@
         {% block content %}
         {% endblock %}
     </div>
+
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Select Option</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <a href="{% url "student_registration" %}" class="btn btn-lg btn-primary">Register as Student</a>
+            <a href="{% url "teacher_registration" %}" class="btn btn-lg btn-info">Register as Teacher</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
