--- a/app_chat/templates/video_rooms.html
+++ b/app_chat/templates/video_rooms.html
@@ -202,7 +202,7 @@ Conferences Manager
                 <div class="row mb-1">
                     <div class="col">
                         <label for="exampleFormControlInput1">Start Time</label>
-                        <input type="text" class="form-control form-control-sm" id="start_time" name="start_time"
+                        <input type="text" autocomplete="false" class="form-control form-control-sm" id="start_time" name="start_time"
                             placeholder="Start Time.">
                     </div>
                     <div class="col d-none">
