--- a/app_chat/templates/video_rooms.html
+++ b/app_chat/templates/video_rooms.html
@@ -193,7 +193,7 @@ Conferences Manager
                     </div>
                     <div class="col">
                         <label for="exampleFormControlInput1">Start Date</label>
-                        <input type="text" class="form-control form-control-sm" id="start_date" name="start_date"
+                        <input type="text" autocomplete="false" class="form-control form-control-sm" id="start_date" name="start_date"
                             placeholder="Start Date.">
                     </div>
                     
