--- a/app_chat/templates/video_rooms.html
+++ b/app_chat/templates/video_rooms.html
@@ -169,7 +169,7 @@ Conferences Manager
 </div>
 
 <script type="text/x-handlebars-template" id='roomFormTemplate'>
-    <form>
+    <form autocomplete="off">
 
         <div class="row">
             <div class="col-md-7">
@@ -193,7 +193,7 @@ Conferences Manager
                     </div>
                     <div class="col">
                         <label for="exampleFormControlInput1">Start Date</label>
-                        <input type="text" autocomplete="nope" class="form-control form-control-sm" id="start_date" name="start_date"
+                        <input type="text" autocomplete="off" class="form-control form-control-sm" id="start_date" name="start_date"
                             placeholder="Start Date.">
                     </div>
                     
@@ -202,7 +202,7 @@ Conferences Manager
                 <div class="row mb-1">
                     <div class="col">
                         <label for="exampleFormControlInput1">Start Time</label>
-                        <input type="text" autocomplete="false" class="form-control form-control-sm" id="start_time" name="start_time"
+                        <input type="text" autocomplete="off" class="form-control form-control-sm" id="start_time" name="start_time"
                             placeholder="Start Time.">
                     </div>
                     <div class="col d-none">
