--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -17,7 +17,7 @@ All courses
             <nav id="sidebar" class="sidebar-wrapper">
                 <div class="sidebar-content">
                     <div class="sidebar-brand">
-                        <a href="{% url "course_list" %}">All </a>
+                        <a href="{% url "courses_list" %}">All </a>
                     </div>
                     <!-- sidebar-search  -->
                     <div class="sidebar-menu">
@@ -73,14 +73,20 @@ All courses
                         <div class="single-popular-course mb-100 wow fadeInUp" data-wow-delay="250ms">
 
                             <div class="course-content">
-                                <h4>
+                                <strong>
                                     {{ course.title }}
-                                </h4>
+                                </strong>
                                 <div class="meta d-flex align-items-center">
                                     <span><i class="fa fa-circle" aria-hidden="true"></i></span>
                                     <a href="{% url "course_list_subject" subject.slug %}">{{ subject }}</a>
                                 </div>
-                                <p> Instructor: {{ course.owner.get_full_name }}</p>
+                                <p> Instructor:
+                                    {% if course.owner.get_full_name %}
+                                    {{ course.owner.get_full_name }}
+                                    {% else %}
+                                    {{ course.owner.username }}
+                                    {% endif %}
+                                    </p>
                                 <p> {{ course.total_modules }} Modules.</p>
                             </div>
 
