--- a/courses/static/css/style.css
+++ b/courses/static/css/style.css
@@ -589,7 +589,7 @@ input:focus, textarea:focus {
 .clever-main-menu .search-area form {
   position: relative;
   z-index: 10;
-  width: 230px;
+  width: 290px;
   height: 40px;
   margin: 0 50px;
 }
@@ -695,6 +695,9 @@ input:focus, textarea:focus {
 .login-state {
   position: relative;
   z-index: 1;
+  border: 1px solid #dae2ff;
+  text-transform: uppercase;
+  padding: 3px 14px;
 }
 
 .login-state .user-name .dropdown .dropdown-toggle {
@@ -3032,3 +3035,4 @@ position: relative;
   color: #000;
   font-size: 10px;
 }
+
