--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -5,9 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <title>{% block title %}NYC Construction Safety Tranining Llc{% endblock %}</title>
+    <link rel="icon" type="image/png" sizes="192x192" href="{% static "/images/apple-icon.png" %}">
     <link href="{% static "/css/base.css" %}" rel="stylesheet">
     <link href="{% static "/css/style.css" %}" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"></link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    </link>
     <style>
 
     </style>
@@ -41,7 +43,8 @@
                 <nav class="classy-navbar justify-content-between" id="cleverNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="/"><img src="{% static "/images/logo.png" %}" alt=""></a>
+                    <a class="nav-brand" href="/"><img src="{% static "/images/logo2.png" %}" style="height: 39px;"
+                            alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -58,72 +61,80 @@
 
                         <!-- Nav Start -->
                         <div class="classynav">
+
                             <ul>
-                                <li><a href="/">Home</a></li>
 
-                                {% if request.user.is_authenticated and request.user.is_student == True %}
-                                <li><a href="{% url "student_course_list" %}"">Student Dashboard</a></li>
-                                {% endif %}
-
-                                {% if request.user.is_authenticated and request.user.is_teacher == True %}
-                                <li><a href="{% url "teacher_dashboard" %}"">Teacher Dashboard</a></li>
-                                {% endif %}
-
-                                <!-- <li><a href=" #">Pages</a>
+                                <li class="cn-dropdown-item has-down courses-menu">
+                                    <a href=" #">Courses</a>
                                     <ul class="dropdown">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="courses.html">Courses</a></li>
-                                        <li><a href="single-course.html">Single Courses</a></li>
-                                        <li><a href="instructors.html">Instructors</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="blog-details.html">Single Blog</a></li>
-                                        <li><a href="regular-page.html">Regular Page</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="{% url 'courses_list' %}">All Courses</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="courses.html">Courses</a></li>
-                                <li><a href="instructors.html">Instructors</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="contact.html">Contact</a></li> -->
+
+                                <!-- {% if request.user.is_authenticated and request.user.is_student == True %}
+                                <li><a class="btn-blue" href="{% url "student_course_list" %}"">Student Dashboard</a></li>
+                                {% endif %} -->
+
+                                <!-- {% if request.user.is_authenticated and request.user.is_teacher == True %}
+                                <li><a class=" btn-blue" href="{% url "teacher_dashboard" %}"">Teacher Dashboard</a></li>
+                                {% endif %} -->
+
                             </ul>
 
                             <!-- Search Button -->
-                            <div class="search-area">
-                                <form action="#" method="post">
-                                    <input type="search" name="search" id="search" placeholder="Search">
+                            <div class=" search-area">
+                                <form action="{% url "courses_list" %}" method="get">
+                                    <input type="search" name="q" id="search" placeholder="Search">
                                     <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
                                 </form>
                             </div>
 
                             {% if request.user.is_authenticated %}
 
-                            <div class="login-state d-flex align-items-center">
-                                <div class="user-name mr-30">
+                            {% if request.user.is_teacher == True %}
+                            <div class="login-state d-flex align-items-center mr-30 ">
+                                <div class="user-name">
+                                    <div class="dropdown">
+                                        <a href="{% url "teacher_dashboard" %}" role="button">Teacher Dashboard</a>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
+
+                            {% if request.user.is_student == True %}
+                            <div class="login-state d-flex align-items-center mr-30 ">
+                                <div class="user-name">
+                                    <div class="dropdown">
+                                        <a href="{% url "student_course_list" %}" role="button">Student Dashboard</a>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
+
+                            <div class="login-state d-flex align-items-center ">
+                                <div class="user-name">
                                     <div class="dropdown">
                                         <a class="dropdown-toggle" href="#" role="button" id="userName"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ request.user }}</a>
+                                            data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">{{ request.user }}</a>
                                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userName">
-                                            
+
                                             <a class="dropdown-item" href="{% url "logout" %}">Sign out</a>
                                         </div>
                                     </div>
                                 </div>
-                               
                             </div>
-
-                         
 
                             {% else %}
                             <div class="register-login-area">
                                 <!-- <a href="#" class="btn">Register</a> -->
                                 <a href="{% url "login" %}" class="btn active">Sign in</a>
-                                <a data-toggle="modal" data-target="#exampleModal" href="void(0);" class="btn">Register</a>
+                                <a data-toggle="modal" data-target="#exampleModal" href="void(0);"
+                                    class="btn">Register</a>
                             </div>
                             {% endif %}
 
                             <!-- Register / Login -->
-
-
                         </div>
                         <!-- Nav End -->
                     </div>
@@ -141,36 +152,40 @@
     </div>
 
     <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Select Option</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Select Option</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <a href="{% url "student_registration" %}" class="btn btn-lg btn-primary">Register as Student</a>
+                    <a href="{% url "teacher_registration" %}" class="btn btn-lg btn-info">Register as Teacher</a>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-            <a href="{% url "student_registration" %}" class="btn btn-lg btn-primary">Register as Student</a>
-            <a href="{% url "teacher_registration" %}" class="btn btn-lg btn-info">Register as Teacher</a>
-        </div>
-      </div>
     </div>
-  </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js" integrity="sha256-5oApc/wMda1ntIEK4qoWJ4YItnV4fBHMwywunj8gPqc=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"
+        integrity="sha256-5oApc/wMda1ntIEK4qoWJ4YItnV4fBHMwywunj8gPqc=" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-    
+
     <script src="//media.twiliocdn.com/sdk/js/video/releases/2.4.0/twilio-video.min.js"></script>
-    
+
     {% block scripts %}
     {% endblock %}
     <script>
@@ -178,6 +193,22 @@
             {% block domready %}
             {% endblock %}
         });
+
+        $(document).ready(function () {
+            getSubjects();
+
+
+        });
+
+        function getSubjects() {
+            $.get('/api/subjects', {}, function (response) {
+                $(response).each(function (indx, item) {
+                    var href = 'course/subject/' + item.slug;
+                    $(".courses-menu ul").append('<li><a href="' + href + '"">' + item.title + '</a></li>');
+                });
+            });
+        }
+
     </script>
 </body>
 
