--- a/app_chat/templates/all_video_rooms.html
+++ b/app_chat/templates/all_video_rooms.html
@@ -2,9 +2,10 @@
 {% load i18n %}
 {% block title %}Live Courses{% endblock %}
 {% block content %}
-<h1>
-    Live Courses
-</h1>
+
+<div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
+    <h1 class="h3 mb-0 text-gray-800">{% trans 'My courses' %}</h1>
+</div>
 
 
 <div class="container-fluid">
@@ -12,10 +13,10 @@
     <div class="row">
         {% for room in object_list %}
 
-        <div class="col-md-4">
-            <div class="single-popular-course mb-100 wow fadeInUp" data-wow-delay="250ms">
+        <div class="col-md-4 mb-2">
+            <div class="card">
 
-                <div class="course-content">
+                <div class="card-body">
 
                     {% for entry in room.participants.all %}
                     {% if entry.member.id == request.user.id %}
@@ -23,24 +24,20 @@
                     {% endif %}
                     {% endfor %}
 
-
-                    <h4>
+                    <h5>
                         {{ room.title }}
-                    </h4>
+                    </h5>
 
                     <p> Course: {{room.course}} </p>
                     <p> Date: {{room.start_date|default_if_none:"N/A"}} </p>
                     <p> Time: {{room.start_time|default_if_none:"N/A"}} </p>
                 </div>
 
-                <div class="seat-rating-fee d-flex justify-content-between">
-                    <div class="seat-rating h-100 d-flex align-items-center">
-
-                    </div>
-                    <div class="course-fee h-100">
-                        <a href="#"" class=" link-join free" owner="{{room.owner.id}}" title="{{room.title}}" id="{{room.id}}"> Join </a>
-                    </div>
+                <div class="card-footer">
+                    <a href="#"" class="btn btn-info btn-sm link-join free" owner="{{room.owner.id}}" title="{{room.title}}"
+                    id="{{room.id}}"> Join </a>
                 </div>
+    
             </div>
         </div>
         {% endfor %}
@@ -85,7 +82,7 @@
     var sentNotification = function (roomId, receiverId, videoTitle) {
 
         var data = {
-            action_target: window.location.origin + '{% url "video_rooms" %}?id='+roomId+ '&action=member',
+            action_target: window.location.origin + '{% url "video_rooms" %}?id=' + roomId + '&action=member',
             action: "link",
             receiver: receiverId,
             status: 'pending',
