--- a/app_chat/templates/video_rooms_students.html
+++ b/app_chat/templates/video_rooms_students.html
@@ -11,10 +11,10 @@ Manage Conversations
 {% block content %}
 
 <div class="container-fluid">
-
-    <h1>
-        Conferences
-    </h1>
+    <div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
+        <h1 class="h3 mb-0 text-gray-800">Conferences</h1>
+    </div>
+  
 
     <div class="row">
         <div class="col-md-12">
