--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -28,6 +28,11 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ml-auto">
 
+        <li class=" nav-item"><a class="nav-link  btn btn-sm btn-outline-success" href="/">
+          Back to Site
+        </a>
+      </li>
+      
         {% if request.user.is_authenticated and request.user.is_teacher == True %}
         <li class="nav-item">
           <a class="nav-link text-dark" href="{% url "manage_course_list" %}">My Courses</a></li>
@@ -38,10 +43,7 @@
         </li>
         {% endif %}
 
-        <li class=" nav-item"><a class="nav-link text-dark" href="/">
-          Back to Site
-        </a>
-      </li>
+       
 
         <li class=" nav-item notification dropdown ml-3">
           <a class="nav-link" data-toggle="dropdown" href="#">
