--- a/students/templates/students/course/list.html
+++ b/students/templates/students/course/list.html
@@ -3,12 +3,15 @@
 {% block title %}My courses{% endblock %}
 {% block content %}
 
+<div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
+    <h1 class="h3 mb-0 text-gray-800">{% trans 'My courses' %}</h1>
+</div>
+
 <div class="container">
-    <h1>{% trans 'My courses' %}</h1>
-    <div>
+    <div class="row">
         {% for course in object_list %}
         {% if course.modules.count > 0 %}
-        <div>
+        <div class="col-md-6">
             <h3>{{ course.title }}</h3>
             <p><a href="{% url 'student_course_detail' course.id %}"
                     class="btn btn-primary">{% trans 'Access contents' %}</a></p>
