--- a/students/templates/students/student/taken_quiz_list.html
+++ b/students/templates/students/student/taken_quiz_list.html
@@ -6,15 +6,15 @@
 
 {% block content %}
 
+<div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
+    <h1 class="h3 mb-0 text-gray-800">{% trans 'Taken quiz' %}</h1>
+</div>
+
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <div class="card border-info">
-                <div class="card-header text-white bg-info ">
-                    <strong>{% trans 'Taken quiz' %}</strong>
-                </div>
+            <div class="card">
                 <div class="card-body">
-                   
                     <table class="table">
                         <thead>
                             <tr>
